# clin-syco

./: .gitignore  README.md  pyproject.toml  run_local.py
experiments/: h10_extended_decomposition.py  h11_orthogonal_complement.py  h12_activation_addition.py  h13_distortion_emotion_interaction.py  h14_token_attribution.py  h15_circuit_decomposition.py  h16_publication_validation.py  h17_methodology_validation.py  h18_causal_tracing.py  h19_path_patching.py  h1_direction_comparison.py  h20_circuit_steering.py  h21_nonlinear_steering.py  h2_uncertainty_deference.py  h3_checkpoint_evolution.py  h4_attention_routing.py  h5_dpo_reversal.py  h6_emotional_gradient.py  h7_distortion_subspaces.py  h8_pretraining_entanglement.py  h9_warmth_tax.py
notebooks/: colab_causal.ipynb  colab_efficient.ipynb  colab_full_experiments.ipynb
results/h1/: h1_results.json
results/h10/: h10_results.json
results/h11/: h11_results.json
results/h12/: h12_results.json
results/h13/: h13_results.json
results/h14/: h14_results.json
results/h15/: h15_results.json
results/h16/: h16_results.json
results/h17/: h17_results.json
results/h2/: h2_results.json
results/h3/: h3_results.json
results/h4/: h4_results.json
results/h5/: h5_results.json
results/h6/: h6_results.json
results/h7/: h7_results.json
results/h8/: h8_results.json
results/h9/: h9_results.json
src/pals/: __init__.py  attention.py  circuit.py  decomposition.py  directions.py  models.py  (+7 more)
stimuli/: cognitive_distortions.json  cognitive_distortions_augmented.json  factual_control.json  high_emotion_general.json
(+12 files in other folders)
